[package]
name = "localopts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
bril-rs = { git = "https://github.com/sampsyo/bril.git", features= ["memory", "float", "ssa", "speculate", "position", "import", "char"] }
clap = { version = "4.4.2", features = ["derive"] }
petgraph = "0.6.4"
